can use arbitrary lowercase or uppercase